--- a/config/default/core.entity_view_display.node.partner.small_teaser.yml
+++ b/config/default/core.entity_view_display.node.partner.small_teaser.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.node.partner.body
     - field.field.node.partner.field_address
     - field.field.node.partner.field_category
-    - field.field.node.partner.field_component_item
     - field.field.node.partner.field_components
     - field.field.node.partner.field_email
     - field.field.node.partner.field_image
@@ -16,6 +15,9 @@ dependencies:
     - field.field.node.partner.field_logo
     - field.field.node.partner.field_metatags
     - field.field.node.partner.field_phone
+    - field.field.node.partner.field_runner_up
+    - field.field.node.partner.field_website_of_the_year
+    - field.field.node.partner.field_winner
     - node.type.partner
     - responsive_image.styles.fourth_column_hq
   module:
@@ -52,7 +54,6 @@ hidden:
   body: true
   content_moderation_control: true
   field_address: true
-  field_component_item: true
   field_components: true
   field_email: true
   field_image: true
@@ -60,5 +61,8 @@ hidden:
   field_link: true
   field_metatags: true
   field_phone: true
+  field_runner_up: true
+  field_website_of_the_year: true
+  field_winner: true
   langcode: true
   links: true
