--- a/config/default/core.entity_form_display.node.partner.default.yml
+++ b/config/default/core.entity_form_display.node.partner.default.yml
@@ -6,11 +6,11 @@ dependencies:
     - field.field.node.partner.body
     - field.field.node.partner.field_address
     - field.field.node.partner.field_category
-    - field.field.node.partner.field_components
     - field.field.node.partner.field_email
     - field.field.node.partner.field_image
     - field.field.node.partner.field_intro
     - field.field.node.partner.field_link
+    - field.field.node.partner.field_links
     - field.field.node.partner.field_logo
     - field.field.node.partner.field_metatags
     - field.field.node.partner.field_phone
@@ -27,7 +27,6 @@ dependencies:
     - link
     - media_library
     - metatag
-    - paragraphs
     - path
     - scheduler
     - scheduler_content_moderation_integration
@@ -90,8 +89,8 @@ third_party_settings:
         - field_phone
         - field_address
         - field_components
+        - group_social_links
         - field_link
-        - field_component_item
         - group_splash_awards
       label: Sidebar
       region: content
@@ -128,13 +127,28 @@ third_party_settings:
       label: 'Splash Awards'
       region: content
       parent_name: group_sidebar
-      weight: 25
+      weight: 26
       format_type: details
       format_settings:
         classes: ''
         show_empty_fields: false
         id: ''
-        open: false
+        open: true
+        description: ''
+        required_fields: true
+    group_social_links:
+      children:
+        - field_links
+      label: 'Social Links'
+      region: content
+      parent_name: group_sidebar
+      weight: 23
+      format_type: details
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        open: true
         description: ''
         required_fields: true
 id: node.partner.default
@@ -173,25 +187,6 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_components:
-    type: paragraphs
-    weight: 22
-    region: content
-    settings:
-      title: 'Social Media'
-      title_plural: 'Social Medias'
-      edit_mode: open
-      closed_mode: summary
-      autocollapse: none
-      closed_mode_threshold: 0
-      add_mode: button
-      form_display_mode: default
-      default_paragraph_type: _none
-      features:
-        add_above: '0'
-        collapse_edit_all: collapse_edit_all
-        duplicate: duplicate
-    third_party_settings: {  }
   field_email:
     type: email_default
     weight: 19
@@ -220,7 +215,15 @@ content:
         hide_guidelines: '1'
   field_link:
     type: link_default
-    weight: 23
+    weight: 25
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+  field_links:
+    type: link_default
+    weight: 24
     region: content
     settings:
       placeholder_url: ''
@@ -250,7 +253,7 @@ content:
     third_party_settings: {  }
   field_runner_up:
     type: number
-    weight: 27
+    weight: 28
     region: content
     settings:
       placeholder: ''
@@ -284,20 +287,20 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 5
+    weight: 6
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 8
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -316,7 +319,7 @@ content:
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 6
+    weight: 7
     region: content
     settings:
       display_label: true
@@ -341,7 +344,7 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 9
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
