--- a/config/default/core.entity_view_display.node.partner.default.yml
+++ b/config/default/core.entity_view_display.node.partner.default.yml
@@ -6,11 +6,11 @@ dependencies:
     - field.field.node.partner.body
     - field.field.node.partner.field_address
     - field.field.node.partner.field_category
-    - field.field.node.partner.field_components
     - field.field.node.partner.field_email
     - field.field.node.partner.field_image
     - field.field.node.partner.field_intro
     - field.field.node.partner.field_link
+    - field.field.node.partner.field_links
     - field.field.node.partner.field_logo
     - field.field.node.partner.field_metatags
     - field.field.node.partner.field_phone
@@ -22,7 +22,6 @@ dependencies:
   module:
     - address
     - address_map_link
-    - entity_reference_revisions
     - link
     - media_responsive_thumbnail
     - telephone
@@ -66,15 +65,6 @@ content:
     third_party_settings: {  }
     weight: 7
     region: content
-  field_components:
-    type: entity_reference_revisions_entity_view
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    weight: 14
-    region: content
   field_email:
     type: basic_string
     label: hidden
@@ -109,6 +99,18 @@ content:
       target: ''
     third_party_settings: {  }
     weight: 15
+    region: content
+  field_links:
+    type: link
+    label: hidden
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    weight: 20
     region: content
   field_logo:
     type: media_responsive_thumbnail
