--- a/config/default/core.entity_view_display.node.partner.small_teaser.yml
+++ b/config/default/core.entity_view_display.node.partner.small_teaser.yml
@@ -7,11 +7,11 @@ dependencies:
     - field.field.node.partner.body
     - field.field.node.partner.field_address
     - field.field.node.partner.field_category
-    - field.field.node.partner.field_components
     - field.field.node.partner.field_email
     - field.field.node.partner.field_image
     - field.field.node.partner.field_intro
     - field.field.node.partner.field_link
+    - field.field.node.partner.field_links
     - field.field.node.partner.field_logo
     - field.field.node.partner.field_metatags
     - field.field.node.partner.field_phone
@@ -54,11 +54,11 @@ hidden:
   body: true
   content_moderation_control: true
   field_address: true
-  field_components: true
   field_email: true
   field_image: true
   field_intro: true
   field_link: true
+  field_links: true
   field_metatags: true
   field_phone: true
   field_runner_up: true
