--- a/config/default/core.entity_form_display.node.case.default.yml
+++ b/config/default/core.entity_form_display.node.case.default.yml
@@ -149,7 +149,7 @@ content:
       title: Slider
       title_plural: Sliders
       edit_mode: open
-      closed_mode: summary
+      closed_mode: preview
       autocollapse: none
       closed_mode_threshold: 0
       add_mode: button
@@ -168,7 +168,7 @@ content:
       title: Component
       title_plural: Components
       edit_mode: open
-      closed_mode: summary
+      closed_mode: preview
       autocollapse: none
       closed_mode_threshold: 0
       add_mode: button
