--- a/config/default/core.entity_view_display.taxonomy_term.category.small_teaser.yml
+++ b/config/default/core.entity_view_display.taxonomy_term.category.small_teaser.yml
@@ -5,12 +5,15 @@ dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.small_teaser
     - field.field.taxonomy_term.category.field_description
+    - field.field.taxonomy_term.category.field_heading
+    - field.field.taxonomy_term.category.field_image
     - field.field.taxonomy_term.category.field_media
-    - responsive_image.styles.fourth_column_hq
+    - field.field.taxonomy_term.category.field_p_components
+    - field.field.taxonomy_term.category.field_references_limit
     - taxonomy.vocabulary.category
   module:
     - layout_builder
-    - media_responsive_thumbnail
+    - text
 third_party_settings:
   layout_builder:
     enabled: false
@@ -21,21 +24,25 @@ bundle: category
 mode: small_teaser
 content:
   field_description:
-    type: basic_string
+    type: text_default
     label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 1
     region: content
   field_media:
-    type: media_responsive_thumbnail
+    type: entity_reference_entity_view
     label: hidden
     settings:
-      responsive_image_style: fourth_column_hq
-      image_link: ''
+      view_mode: logo
+      link: false
     third_party_settings: {  }
     weight: 0
     region: content
 hidden:
   description: true
+  field_heading: true
+  field_image: true
+  field_p_components: true
+  field_references_limit: true
   langcode: true
