--- a/config/default/field.storage.taxonomy_term.field_heading.yml
+++ b/config/default/field.storage.taxonomy_term.field_heading.yml
@@ -1,16 +1,18 @@
-uuid: bcf3f9b3-f440-44d8-a003-10e0aa0465c1
+uuid: 978147ab-6398-45ec-b01d-ed82e4788190
 langcode: en
 status: true
 dependencies:
   module:
     - taxonomy
-    - text
-id: taxonomy_term.field_description
-field_name: field_description
+id: taxonomy_term.field_heading
+field_name: field_heading
 entity_type: taxonomy_term
-type: text_long
-settings: {  }
-module: text
+type: string
+settings:
+  max_length: 255
+  case_sensitive: false
+  is_ascii: false
+module: core
 locked: false
 cardinality: 1
 translatable: true
