--- a/docroot/themes/custom/themekit/themekit.info.yml
+++ b/docroot/themes/custom/themekit/themekit.info.yml
@@ -29,4 +29,5 @@ regions:
   header: Header
   highlighted: Highlighted
   content: Content
-  footer: Footer
+  footer-top: 'Footer Top'
+  footer-bottom: 'Footer Bottom'
