--- a/config/default/editor.editor.full_html.yml
+++ b/config/default/editor.editor.full_html.yml
@@ -37,6 +37,7 @@ settings:
             - HorizontalRule
             - Blockquote
             - Table
+            - DrupalMediaLibrary
         -
           name: 'Block Formatting'
           items:
@@ -54,7 +55,7 @@ settings:
     language:
       language_list: un
     stylescombo:
-      styles: "a.btn--primary|Button\r\na.link--more|More link\r\nhr.green|Green separator\r\nhr.purple|Purple separator\r\nhr.blue|Blue separator"
+      styles: "a.btn--primary|Button\r\na.link--more|More link\r\nhr.green|Green separator\r\nhr.purple|Purple separator\r\nhr.blue|Blue separator\r\np.text-large|Text Large\r\np.text-card|Text Card\r\np.text-small|Text small"
 image_upload:
   status: true
   scheme: public
