COD-5 - Move footer menu to the footer_top region

--- a/config/default/block.block.themekit_footer.yml
+++ b/config/default/block.block.themekit_footer.yml
@@ -12,7 +12,7 @@ _core:
   default_config_hash: CEMzRVcMOz2IAFPC4jibTZXq3eGpntypWvjCYcMWLh4
 id: themekit_footer
 theme: themekit
-region: footer
+region: footer_top
 weight: -6
 provider: null
 plugin: 'system_menu_block:footer'
