update CKEditor full (add media library), add view mode CKEditor (add settings for remote video, video, image for ckeditor), update node event

--- a/config/default/editor.editor.full_html.yml
+++ b/config/default/editor.editor.full_html.yml
@@ -37,6 +37,7 @@ settings:
             - HorizontalRule
             - Blockquote
             - Table
+            - DrupalMediaLibrary
         -
           name: 'Block Formatting'
           items:
