--- a/config/default/core.entity_view_display.node.event.default.yml
+++ b/config/default/core.entity_view_display.node.event.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - responsive_image.styles.half_column_hq
   module:
     - address
+    - address_map_link
     - datetime_range
     - media_responsive_thumbnail
     - text
@@ -32,7 +33,13 @@ content:
     type: address_default
     label: hidden
     settings: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      address_map_link:
+        link_address: true
+        map_link_type: google_maps
+        map_link_position: address
+        map_link_text: 'Open Map'
+        map_link_new_window: true
     weight: 104
     region: content
   field_date_range:
