--- a/docroot/themes/custom/themekit/package.json
+++ b/docroot/themes/custom/themekit/package.json
@@ -44,6 +44,7 @@
     "postcss-loader": "^4.2.0",
     "postcss-safe-parser": "^5.0.2",
     "postcss-scss": "^3.0.4",
+    "prettier": "2.6.2",
     "sass-loader": "^10.1.1",
     "sassdoc": "^2.7.1",
     "webpack": "^4.46.0",
