--- a/docroot/themes/custom/themekit/themekit.info.yml
+++ b/docroot/themes/custom/themekit/themekit.info.yml
@@ -29,5 +29,5 @@ regions:
   header: Header
   highlighted: Highlighted
   content: Content
-  footer-top: 'Footer Top'
-  footer-bottom: 'Footer Bottom'
+  footer_top: 'Footer Top'
+  footer_bottom: 'Footer Bottom'
