COD-8 - Init UI for the basic_banner component

--- a/docroot/themes/custom/themekit/partials.yml
+++ b/docroot/themes/custom/themekit/partials.yml
@@ -1,3 +1,9 @@
+component--basic-banner:
+  dependencies:
+    - themekit/themekit
+  css:
+    theme:
+      dist/css/block--basic-banner.css: {}
 component:
   dependencies:
     - themekit/themekit
