--- a/config/default/core.entity_form_display.taxonomy_term.category.default.yml
+++ b/config/default/core.entity_form_display.taxonomy_term.category.default.yml
@@ -15,7 +15,6 @@ dependencies:
     - field_group
     - media_library
     - paragraphs
-    - path
     - text
 third_party_settings:
   field_group:
@@ -163,7 +162,7 @@ content:
       closed_mode_threshold: 0
       add_mode: button
       form_display_mode: default
-      default_paragraph_type: category_feature
+      default_paragraph_type: _none
       features:
         add_above: '0'
         collapse_edit_all: collapse_edit_all
@@ -179,13 +178,6 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  langcode:
-    type: language_select
-    weight: 2
-    region: content
-    settings:
-      include_locked: true
-    third_party_settings: {  }
   name:
     type: string_textfield
     weight: 0
@@ -194,17 +186,13 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 3
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 4
+    weight: 2
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  langcode: true
+  path: true
