--- a/config/default/core.entity_view_display.media.image.logo.yml
+++ b/config/default/core.entity_view_display.media.image.logo.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.media.image.field_image_type
     - field.field.media.image.field_media_image
     - field.field.media.image.field_tags
+    - image.style.x_small_hq
     - lazy.settings
     - media.type.image
   module:
@@ -28,7 +29,7 @@ content:
     type: lazy_image
     label: hidden
     settings:
-      image_style: ''
+      image_style: x_small_hq
       image_link: ''
     third_party_settings:
       lazy:
