--- a/config/default/field.field.taxonomy_term.category.field_image.yml
+++ b/config/default/field.field.taxonomy_term.category.field_image.yml
@@ -12,7 +12,7 @@ entity_type: taxonomy_term
 bundle: category
 label: Image
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
