--- a/config/default/field.field.taxonomy_term.category.field_media.yml
+++ b/config/default/field.field.taxonomy_term.category.field_media.yml
@@ -13,7 +13,7 @@ entity_type: taxonomy_term
 bundle: category
 label: Icon
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
