--- a/config/default/core.entity_view_mode.taxonomy_term.teaser.yml
+++ b/config/default/core.entity_view_mode.taxonomy_term.teaser.yml
@@ -1,10 +1,10 @@
-uuid: 64337638-fc65-4334-b221-8e89a46de7e0
+uuid: 50e9001b-93d0-4e00-bfc3-90852efde038
 langcode: en
 status: true
 dependencies:
   module:
     - taxonomy
-id: taxonomy_term.small_teaser
-label: 'Small Teaser'
+id: taxonomy_term.teaser
+label: Teaser
 targetEntityType: taxonomy_term
 cache: true
