--- a/config/default/views.view.categories.yml
+++ b/config/default/views.view.categories.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.taxonomy_term.small_teaser
+    - core.entity_view_mode.taxonomy_term.teaser
     - taxonomy.vocabulary.category
   module:
     - taxonomy
@@ -144,7 +144,7 @@ display:
         type: 'entity:taxonomy_term'
         options:
           relationship: none
-          view_mode: small_teaser
+          view_mode: teaser
       query:
         type: views_query
         options:
