--- a/config/default/core.entity_view_display.node.partner.small_teaser.yml
+++ b/config/default/core.entity_view_display.node.partner.small_teaser.yml
@@ -19,10 +19,8 @@ dependencies:
     - field.field.node.partner.field_website_of_the_year
     - field.field.node.partner.field_winner
     - node.type.partner
-    - responsive_image.styles.fourth_column_hq
   module:
     - layout_builder
-    - media_responsive_thumbnail
     - user
 third_party_settings:
   layout_builder:
@@ -42,11 +40,11 @@ content:
     weight: 1
     region: content
   field_logo:
-    type: media_responsive_thumbnail
+    type: entity_reference_entity_view
     label: hidden
     settings:
-      responsive_image_style: fourth_column_hq
-      image_link: ''
+      view_mode: logo
+      link: false
     third_party_settings: {  }
     weight: 0
     region: content
