--- a/config/default/field.field.paragraph.link_default.field_link.yml
+++ b/config/default/field.field.paragraph.link_default.field_link.yml
@@ -15,7 +15,7 @@ entity_type: paragraph
 bundle: link_default
 label: Link
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
