COD-16 - UI adjustments of the Link Default paragraph; Adjust base button styles (mobile view)

--- a/docroot/themes/custom/themekit/partials.yml
+++ b/docroot/themes/custom/themekit/partials.yml
@@ -22,6 +22,12 @@ component--detail-item:
   css:
     theme:
       dist/css/detail-item.css: {}
+component--link-default:
+  dependencies:
+    - themekit/themekit
+  css:
+    theme:
+      dist/css/paragraph-link-default.css: {}
 component--navigation--community:
   dependencies:
     - themekit/themekit
