Build Partners component; create and configure Partners view and partner teaser

--- a/config/default/core.entity_view_display.node.partner.teaser.yml
+++ b/config/default/core.entity_view_display.node.partner.teaser.yml
@@ -19,46 +19,36 @@ dependencies:
     - field.field.node.partner.field_website_of_the_year
     - field.field.node.partner.field_winner
     - node.type.partner
-    - responsive_image.styles.third_column_hq
   module:
-    - media_responsive_thumbnail
     - user
 id: node.partner.teaser
 targetEntityType: node
 bundle: partner
 mode: teaser
 content:
-  content_moderation_control:
-    settings: {  }
+  field_logo:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: logo
+      link: false
     third_party_settings: {  }
     weight: 0
     region: content
-  field_image:
-    type: media_responsive_thumbnail
-    label: hidden
-    settings:
-      responsive_image_style: third_column_hq
-      image_link: ''
-    third_party_settings: {  }
-    weight: 2
-    region: content
-  links:
-    settings: {  }
-    third_party_settings: {  }
-    weight: 1
-    region: content
 hidden:
   body: true
+  content_moderation_control: true
   field_address: true
   field_category: true
   field_email: true
+  field_image: true
   field_intro: true
   field_link: true
   field_links: true
-  field_logo: true
   field_metatags: true
   field_phone: true
   field_runner_up: true
   field_website_of_the_year: true
   field_winner: true
   langcode: true
+  links: true
