--- a/config/default/site_settings.site_setting_entity_type.footer_copyright.yml
+++ b/config/default/site_settings.site_setting_entity_type.footer_copyright.yml
@@ -4,5 +4,5 @@ status: true
 dependencies: {  }
 id: footer_copyright
 label: 'Footer copyright'
-fieldset: Content
+fieldset: Footer
 multiple: false
