Add styles for partners block; adjust partners view configs

--- a/config/default/core.entity_view_display.media.svg.logo.yml
+++ b/config/default/core.entity_view_display.media.svg.logo.yml
@@ -28,7 +28,7 @@ content:
     type: svg_image_field_formatter
     label: hidden
     settings:
-      inline: false
+      inline: true
       apply_dimensions: false
       width: null
       height: null
